--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
   "repository": "https://github.com/jbtronics/bs-treeview",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "keywords": [],
   "scripts": {
     "build": "run-p build:*",
@@ -38,9 +38,6 @@
     "reset-hard": "git clean -dfx && git reset --hard && yarn",
     "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish"
   },
-  "engines": {
-    "node": ">=10"
-  },
   "dependencies": {},
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
@@ -54,7 +51,6 @@
     "eslint": "^7.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-functional": "^3.0.2",
     "eslint-plugin-import": "^2.22.0",
     "gh-pages": "^3.1.0",
     "npm-run-all": "^4.1.5",
