--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,10 @@
     "target": "es2017",
     "outDir": "build/main",
     "rootDir": "src",
-    "moduleResolution": "node",
-    "module": "commonjs",
     "declaration": true,
     "inlineSourceMap": true,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
-    "resolveJsonModule": true /* Include modules imported with .json extension. */,
+    //"resolveJsonModule": true /* Include modules imported with .json extension. */,
 
     // "strict": true /* Enable all strict type-checking options. */,
 
