--- a/tsconfig.module.json
+++ b/tsconfig.module.json
@@ -1,9 +1,9 @@
 {
   "extends": "./tsconfig",
   "compilerOptions": {
-    "target": "esnext",
+    "target": "es2015",
     "outDir": "build/module",
-    "module": "esnext"
+    "module": "es2015"
   },
   "exclude": [
     "node_modules/**"
