--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
     "name": "@jbtronics/bs-treeview",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "TreeView element for Javascript (mostly optimized for bootstrap)",
     "main": "build/main/index.js",
     "typings": "build/main/index.d.ts",
     "module": "build/module/index.js",
     "repository": "https://github.com/jbtronics/bs-treeview",
     "license": "Apache-2.0",
-    "keywords": ["treeview", "bootstrap", "bootstrap-treeview", "treeview-bootstrap", "treeview-component", "bootstrap", "tree"],
+    "keywords": [
+        "treeview",
+        "bootstrap",
+        "bootstrap-treeview",
+        "treeview-bootstrap",
+        "treeview-component",
+        "bootstrap",
+        "tree"
+    ],
     "scripts": {
         "build": "run-p build:*",
         "build:main": "tsc -p tsconfig.json",
