--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "check-integration-tests": "run-s check-integration-test:*",
         "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
         "watch:build": "tsc -p tsconfig.json -w",
+        "watch:module": "tsc -p tsconfig.module.json -w",
         "watch:test": "nyc --silent ava --watch",
         "cov": "run-s build test:unit cov:html cov:lcov && open-cli coverage/index.html",
         "cov:html": "nyc report --reporter=html",
